# projeto3

./: .dockerignore  .gitignore  doc.md  docker-compose.yml  dockerfile  old.py  requirements.txt  scraping.db  vercel.json
api/: api.py  app.py  log_utils.py  main.py  references.json
db/: db_users.py  db_utils.py
logs/: log_utils.py
src/api/: app.py
src/db_querys/: db_users.py  db_utils.py  etl_exportacao.py  etl_producao.py
src/job/: etl_job1.py  etl_job2.py  ml_job.py
src/modelo/: ml_job.py
src/utils/: auth.py
utils/: auth.py
venv-projeto-fase1/: pyproject.toml
